# coolbeans-cli

./: README.md  pyproject.toml  test.py  thing.md
src/coolbeans/: __main__.py  defaults.py
src/coolbeans/cmds/: theme_switch.py
src/coolbeans/utils/: locations.py
